--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
-  text-align: center;
+.page-container {
+  background: #0e0e0e;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content-wrapper {
+  width: 100%;
+  max-width: 100%;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  width: 65%;
+  max-width: 380px;
+  max-height: 50vh;
+  animation: boombox 0.8s ease-in-out infinite alternate;
 }
 
-@keyframes App-logo-spin {
+.head-line__text {
+  letter-spacing: 2px;
+  font-family: 'Audiowide';
+  animation: neon 1.5s ease-in-out infinite alternate;
+  color: #fff;
+  font-size: 3rem;
+  text-align: center;
+  margin: 3vh 0 3vh 0;
+  max-width: calc(100% - 40px);
+}
+
+.head-line__coming-soon {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 1.5rem;
+  letter-spacing: 3px;
+  color: #e6dbae;
+}
+
+.social-links {
+  height: 90px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.social-links a {
+  transition: all 0.2s ease;
+}
+
+.social-inks a img {
+  height: 48px;
+  width: auto;
+  max-width: 48px;
+}
+
+.social-links a:hover {
+  transform: scale(1.2);
+}
+
+@keyframes neon {
   from {
-    transform: rotate(0deg);
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff9900,
+      0 0 70px #ff9900, 0 0 80px #ff9900, 0 0 100px #ff9900, 0 0 150px #ff9900;
   }
   to {
-    transform: rotate(360deg);
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff9900,
+      0 0 35px #ff9900, 0 0 40px #ff9900, 0 0 50px #ff9900, 0 0 75px #ff9900;
+  }
+}
+
+@keyframes boombox {
+    0% {
+      transform: scale(1);
+  }
+  30% {
+      transform: scale(1);
+  }
+  40% {
+      transform: scale(1.08);
+  }
+  50% {
+      transform: scale(1);
+  }
+
+  60% {
+      transform: scale(1);
+  }
+  70% {
+      transform: scale(1.05);
+  }
+  80% {
+      transform: scale(1);
+  }
+  100% {
+      transform: scale(1);
   }
 }
