--- a/src/App.css
+++ b/src/App.css
@@ -189,25 +189,23 @@
   }
 }
 
-@keyframes fadeInLeftTransition {
+@keyframes fadeInFeatures {
   0% {
-    transform: translate(100%);
-    opacity: 0;
+    transform: scale(1);
+    opacity: 1;
   }
   100% {
-    transform: translate(0);
-    opacity: 1;
+    transform: scale(0);
+    opacity: 0;
   }
 }
 
-@keyframes fadeOutLeftTransition {
+@keyframes fadeInOut {
   0% {
-    transform: translate(100%);
-    opacity: 1;
+    opacity: 0.4;
   }
   100% {
-    transform: translate(0);
-    opacity: 0;
+    opacity: 1;
   }
 }
 
