--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --color-brand-primary: hsl(46deg 100% 50%);
+  --color-brand-primary: #f0b90b;
   --container-padding: 15px;
 }
 
@@ -118,8 +118,7 @@
 }
 
 .text-glow {
-  text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #fff, 0 0 4px #fbff00,
-    0 0 5px #f90, 0 0 0px #f90, 0 0 0px #f90, 0 0 0px #f90;
+  text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #fff, 0 0 4px #fbff00, 0 0 5px #f90, 0 0 0px #f90, 0 0 0px #f90, 0 0 0px #f90;
 }
 
 @media (max-width: 480px) {
@@ -156,32 +155,6 @@
   font-size: 24px;
   color: #fff;
   letter-spacing: 3px;
-}
-
-@keyframes bounce {
-  0%,
-  20%,
-  53%,
-  80%,
-  100% {
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-    transform: translateZ(0);
-  }
-  40%,
-  43% {
-    transform: translate3d(0, -30px, 0);
-  }
-  40%,
-  43%,
-  70% {
-    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-  }
-  70% {
-    transform: translate3d(0, -15px, 0);
-  }
-  90% {
-    transform: translate3d(0, -4px, 0);
-  }
 }
 
 /* Causes too much lag */
